[package]
name = "tone_generator"
version = "0.0.1"
edition = "2021"

[workspace]

[[bin]]
name = "play-tone"
path = "play_tone.rs"

[dependencies]
fsdr-blocks = { path = "../.." }
futuresdr = { git="https://github.com/FutureSDR/FutureSDR", version = "0.0.30"}
# num-complex = "0.4.0"
futures = "0.3.24"
axum = "0.6.3"
tower-http = { version = "0.3.3", features = ["add-extension", "cors"] }
bytes = "1"